tests/baselines/reference/moduleResolutionWithSymlinks_withOutDir.errors.txt
/src/app.ts(6,5): error TS2454: Variable 'y' is used before being assigned.


==== /src/app.ts (1 errors) ====
    import { MyClass } from "./library-a";
    import { MyClass2 } from "./library-b";
    
    let x: MyClass;
    let y: MyClass2;
    x = y;
        ~
!!! error TS2454: Variable 'y' is used before being assigned.
    y = x;
    
==== /src/library-a/index.ts (0 errors) ====
    // Same as moduleResolutionWithSymlinks.ts, but with outDir
    
    export class MyClass { private x: number; }
    
==== /src/library-b/index.ts (0 errors) ====
    import {MyClass} from "library-a";
    export { MyClass as MyClass2 }
    